# kompact

./: .clippy.toml  .gitignore  .travis.yml  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MODERNISATION_PLAN.md  README.md  RELEASE.md  ci-preflight.sh  clippy-extra.sh  codecoverage-local.sh  foreword.html  getting-started.html  index.html  kompact.code-workspace  print.html  project.html  pull_request_template.md  run_checks.sh  run_tests.sh  rustfmt.toml  searchindex.js  searchindex.json  travis_install_protobuf.sh
.github/workflows/: ci.yml  codecov.yml  gh-pages.yml  main.yml
async/: index.html
core/: Cargo.toml  test-feature-matrix.sh
core/src/: actors.rs  component.rs  dedicated_scheduler.rs  default_components.rs  default_serialisers.rs  lib.rs  lifecycle.rs  messaging.rs  ports.rs  runtime.rs  serialisation.rs  supervision.rs  test_support.rs  timer_manager.rs  utils.rs
core/src/actors/: distributed.rs  mod.rs  paths.rs  paths_dispatch.rs  refs.rs
core/src/component/: actual_component.rs  component_context.rs  component_core.rs  context.rs  core.rs  definition.rs  future_task.rs  lifecycle.rs  mod.rs  system_handle.rs
core/src/config/: converters_for_config_values.rs  converters_for_hocon_types.rs  converters_for_other_types.rs  macros.rs  mod.rs
core/src/dispatch/: lookup.rs  mod.rs  queue_manager.rs
core/src/dispatch/lookup/: gc.rs  groups.rs  mod.rs  path_trie.rs
core/src/messaging/: bitfields.rs  deser_macro.rs  dispatch.rs  framing.rs  mod.rs  net_message.rs  registration.rs  serialised.rs
core/src/net/: buffer.rs  buffer_pool.rs  frames.rs  mod.rs  network_channel.rs  network_thread.rs  quic_config.rs  quic_endpoint.rs  quinn_endpoint.rs  udp_state.rs
core/src/net/buffers/: buffer_pool.rs  chunk_lease.rs  chunk_ref.rs  decode_buffer.rs  encode_buffer.rs  mod.rs
core/src/routing/: groups.rs  mod.rs
core/src/runtime/: config.rs  errors.rs  lifecycle.rs  mod.rs  scheduler.rs  system.rs
core/src/serialisation/: core.rs  default_serialisers.rs  helpers.rs  mod.rs  protobuf_serialisers.rs  ser_helpers.rs  serde_serialisers.rs
core/src/simulator/: mod.rs  simulation_bridge.rs  simulation_network.rs  simulation_network_dispatcher.rs
core/src/simulator/adaptor/distributions/: mod.rs
core/src/simulator/network/: mod.rs
core/src/simulator/network/identifier/: mod.rs
core/src/simulator_old/adaptor/: mod.rs
core/src/simulator_old/adaptor/distributions/: mod.rs
core/src/simulator_old/network/: mod.rs
core/src/simulator_old/stochastic/events/: mod.rs
core/src/timer/: mod.rs  simulation.rs  thread_timer.rs  timer_manager.rs  wheels.rs
core/src/utils/: ask.rs  checked_casts.rs  erased.rs  iter_extras.rs  macros.rs  mod.rs
core/tests/: dispatch_integration_tests.rs  extra_component_tests.rs  handler_result_tests.rs  macro_compile_tests.rs
core/tests/common/: mod.rs
core/tests/compile-fail/: component_derive_tests.rs  component_derive_tests.stderr  match_deser_tests.rs  match_deser_tests.stderr
distributed/: basiccommunication.html  index.html  namedservices.html  networkbuffers.html  networkstatusport.html  pathrouting.html  serialisation.html
docs/: book.toml  issue-170-followup-plan.md  issue-170-tracker.md
docs/examples/: Cargo.toml  application.conf
docs/examples/local/: Cargo.toml  app_settings.toml
docs/examples/local/src/: batching.rs  lib.rs
docs/examples/net/: Cargo.toml
docs/examples/net/src/: lib.rs  trusting.rs
docs/examples/src/: batching.rs  lib.rs  main.rs  trusting.rs
docs/src/: SUMMARY.md  getting-started.md  project.md
docs/src/async/: index.md
docs/src/distributed/: basiccommunication.md  index.md  namedservices.md  netpingpong.md  networkbuffers.md  networkstatusport.md  pathrouting.md  serialisation.md
docs/src/introduction/: actors.md  components.md  index.md  state.md
docs/src/local/: configuration.md  dynamic-components.md  faultrecovery.md  index.md  logging.md  schedulers.md  timers.md
docs/src/local/communication/: ask.md  handlers.md  index.md  messagesandevents.md  senders.md  state.md  system.md
experiments/datastructures/: Cargo.toml  build.rs
experiments/datastructures/src/: lib.rs
experiments/dynamic-benches/: Cargo.toml  build.rs
experiments/dynamic-benches/src/: actorrefs.rs  do_with.rs  hashes.rs  lib.rs  loop_opts.rs  network_latency.rs  pingperf.rs
experiments/dynamic-benches/src/actor_store/: mod.rs  sequence_store.rs
experiments/schedulers/: Cargo.toml
experiments/schedulers/src/: crossbeam_experiment.rs  main.rs  shared.rs  threadpool_experiment.rs
feature-tests/protobuf-test/: Cargo.toml  build.rs
feature-tests/protobuf-test/proto/: example.proto
feature-tests/protobuf-test/src/: main.rs
feature-tests/protobuf-test/src/messages/: example.rs  mod.rs
feature-tests/protobuf-test/src/protos/: mod.rs
introduction/: actors.html  components.html  index.html  state.html
local/: configuration.html  dynamic-components.html  faultrecovery.html  index.html  logging.html  schedulers.html  timers.html
local/communication/: ask.html  handlers.html  index.html  messagesandevents.html  senders.html  state.html  system.html
macros/actor-derive/: Cargo.toml
macros/actor-derive/src/: lib.rs
macros/component-definition-derive/: Cargo.toml
macros/component-definition-derive/src/: lib.rs
macros/macro-test/: Cargo.toml
macros/macro-test/src/: main.rs
network/: Cargo.toml
network/src/: dispatcher.rs  events.rs  lib.rs  queue_manager.rs
network/src/transport/: mod.rs  network_channel.rs  network_thread.rs  udp_state.rs
network/tests/: dispatch_integration_tests.rs
trie/: Cargo.toml
trie/src/: lib.rs
