[package]
name = "kompact"
version = "0.10.1"
authors = ["Lars Kroll <lkroll@kth.se>", "Johan Mickos <johanmi@kth.se>", "Max Meldrum <mmeldrum@kth.se>",
    "Adam Hasselberg <adamhas@kth.se>"]
edition = "2018"

description = "Kompact is a Rust implementation of the Kompics component model combined with the Actor model."

# documentation = "..."
homepage = "https://kompics.github.io/kompact/"
repository = "https://github.com/kompics/kompact"
readme = "../README.md"
keywords = ["actor", "kompics", "component", "async"]
categories = ["asynchronous", "concurrency", "network-programming"]
license = "MIT"

build = "build.rs"

[badges]
# Maintenance: `status` is required Available options are `actively-developed`,
# `passively-maintained`, `as-is`, `none`, `experimental`, `looking-for-maintainer`
# and `deprecated`.
maintenance = { status = "actively-developed" }

[features]
default 			= ["serde_support","slog/max_level_trace", "slog/release_max_level_info", "ser_id_64", "use_local_executor", "implicit_routes"]
silent_logging 		= ["serde_support", "slog/max_level_info", "slog/release_max_level_error"]
low_latency 		= ["executors/ws-no-park"]
ser_id_64 			= []
ser_id_32 			= []
ser_id_16 			= []
ser_id_8 			= []
thread_pinning 		= ["core_affinity", "executors/numa-aware"]
serde_support 		= ["serde", "bytes/serde"]
type_erasure 		= []
use_local_executor 	= []
implicit_routes		= []

[dependencies]
log 							= "0.4"
kompact-component-derive 		= { version="0.10.1", path = "../macros/component-definition-derive/" }
kompact-actor-derive 			= { version="0.10.1", path = "../macros/actor-derive/" }
crossbeam-channel 				= "0.4"
crossbeam-queue 				= "0.2"
crossbeam-utils 				= "0.7"
arc-swap 						= "0.4"
synchronoise 					= "1.0"
uuid 							= { version = "0.8", features = ["v4"] }
as_num 							= "0.2"
num_cpus 						= "1"
oncemutex 						= "0.1"
slog 							= "2"
slog-async 						= "2"
slog-term 						= "2"
rustc-hash 						= "1.1"
hocon 							= {version = "0.3", default-features = false}
hierarchical_hash_wheel_timer 	= "1.0"
owning_ref 						= "0.4"
futures 						= "0.3"
async-std 						= "1.6"
executors						= "0.8"
lru 							= "0.6"

# Optional
protobuf 						= {version = "2", optional = true, features = ["with-bytes"]}
serde 							= {version = "1.0", optional = true}
core_affinity 					= {version = "0.5", optional = true}

# Network-specific
bytes 							= "1.0"
bitfields 						= "0.2"
mio 							= {version = "0.7.0", features = ["tcp", "os-poll", "udp"]}
iovec 							= "0.1.1" # Match MIOs Version


[dev-dependencies]
tempfile 		= "3"
serde 			= {version = "1.0", features = ["derive"]}
once_cell 		= "1.4"
rustversion 	= "1.0"
trybuild 		= {version = "1.0", features = ["diff"] }

[build-dependencies]
rustc_version 	= "0.2"
