[package]
name = "kompact"
version = "0.12.0"
authors = [
    "Lars Kroll <lkroll@kth.se>",
    "Johan Mickos <johanmi@kth.se>",
    "Max Meldrum <mmeldrum@kth.se>",
    "Adam Hasselberg <adamhas@kth.se>",
]
edition = "2024"
rust-version = "1.94.1"

description = "Kompact is a Rust implementation of the Kompics component model combined with the Actor model."

# documentation = "..."
homepage = "https://kompics.github.io/kompact/"
repository = "https://github.com/kompics/kompact"
readme = "../README.md"
keywords = ["actor", "kompics", "component", "async"]
categories = ["asynchronous", "concurrency", "network-programming"]
license = "MIT"

build = "build.rs"

[badges]
# Maintenance: `status` is required Available options are `actively-developed`,
# `passively-maintained`, `as-is`, `none`, `experimental`, `looking-for-maintainer`
# and `deprecated`.
maintenance = { status = "actively-developed" }

[features]
default = [
    "slog/max_level_trace",
    "slog/release_max_level_info",
    "use_local_executor",
]
silent_logging = [
    "slog/max_level_info",
    "slog/release_max_level_error",
]
low_latency = ["executors/ws-no-park"]
ser_id_64 = ["distributed"]
ser_id_32 = ["distributed"]
ser_id_16 = ["distributed"]
ser_id_8 = ["distributed"]
thread_pinning = ["core_affinity", "executors/numa-aware"]
serde_support = ["serde", "bytes/serde", "distributed"]
type_erasure = []
use_local_executor = []
implicit_routes = ["distributed"]
distributed = []

[dependencies]
log = "0.4"
kompact-component-derive = { version = "0.12.0", path = "../macros/component-definition-derive/" }
kompact-actor-derive = { version = "0.12.0", path = "../macros/actor-derive/" }
crossbeam-channel = { workspace = true }
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
arc-swap = { workspace = true }
synchronoise = "1.0"
uuid = { workspace = true }
num_cpus = "1"
oncemutex = "0.1"
slog = "2"
slog-async = "2"
slog-term = "2"
rustc-hash = { workspace = true }
toml = "1"
humantime = "2"
byte-unit = "5"
hierarchical_hash_wheel_timer = "1.4"
owning_ref = "0.4"
futures = { workspace = true }
async-std = { workspace = true }
executors = "0.10"
lru = { workspace = true }

# Optional
protobuf = { version = "3", optional = true, features = ["with-bytes"] }
serde = { version = "1.0", optional = true }
core_affinity = { version = "0.8", optional = true }

bytes = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
rustversion = "1.0"
trybuild = { version = "1.0", features = ["diff"] }

[build-dependencies]
rustc_version = "0.4"
