[package]
name = "kompact-net"
version = "0.11.3"
authors = [
    "Lars Kroll <lkroll@kth.se>",
    "Johan Mickos <johanmi@kth.se>",
    "Max Meldrum <mmeldrum@kth.se>",
    "Adam Hasselberg <adamhas@kth.se>",
]
edition = "2024"
rust-version = "1.94.1"

description = "Socket-based networking backend for Kompact."
homepage = "https://kompics.github.io/kompact/"
repository = "https://github.com/kompics/kompact"
license = "MIT"

[features]
default = ["distributed"]
distributed = ["kompact/distributed"]
low_latency = ["kompact/low_latency"]

[dependencies]
kompact = { version = "0.11.3", path = "../core" }
arc-swap = "1.9"
async-std = "1.13"
bytes = "1.11"
crossbeam-channel = "0.5"
futures = "0.3"
ipnet = "2.12"
iprange = "0.6"
lru = "0.16"
mio = { version = "1", features = ["net", "os-poll"] }
rustc-hash = "2"
uuid = { version = "1.23", features = ["v4"] }
