[package]
name = "kompact-examples"
version = "0.10.0"
authors = ["Lars Kroll <lkroll@kth.se>"]
edition = "2018"

[dependencies]
slog 				= "2"
slog-async 			= "2"
slog-term 			= "2"
serde 				= { version = "1.0", features = ["derive"] }
trust-dns-proto 	= {version = "0.19", default-features=false}
async-std-resolver 	= "0.19"
dialoguer 			= "0.6"
lru 				= "0.6"
uuid 				= { version = "0.8", features = ["v4", "serde"] }
rand 				= { version = "0.7", features = ["small_rng"] }

[dependencies.kompact]
path = "../../core/"
default-features = true
# features = ["silent_logging", "low_latency"]
# features = ["silent_logging", "ser_id_8"]

