[package]
name = "kompact-examples"
version = "0.11.0"
authors = ["Lars Kroll <lkroll@kth.se>"]
edition = "2018"

[features]
type_erasure = ["kompact/type_erasure"]
silent_logging = ["kompact/silent_logging"]

[dependencies]
slog = "2"
slog-async = "2"
slog-term = "2"
serde = { version = "1", features = ["derive"] }
trust-dns-proto = { version = "0.19", default-features = false }
async-std-resolver = "0.19"
dialoguer = "0.10"
lru = "0.16"
uuid = { version = "1", features = ["v4", "serde"] }
rand = { version = "0.8", features = ["small_rng"] }

[dependencies.kompact]
path = "../../core/"
default-features = true
# features = ["silent_logging", "low_latency"]
# features = ["silent_logging", "ser_id_8"]

[[bin]]
name = "dynamic_components"
required-features = ["type_erasure"]
