[package]
name = "kompact-examples"
version = "0.11.0"
authors = ["Lars Kroll <lkroll@kth.se>"]
edition = "2024"
rust-version = "1.94.1"

[features]
default = ["distributed"]
distributed = ["kompact/distributed"]
type_erasure = ["kompact/type_erasure"]
silent_logging = ["kompact/silent_logging"]

[dependencies]
slog = "2"
slog-async = "2"
slog-term = "2"
serde = { version = "1", features = ["derive"] }
async-std-resolver = "0.24.1"
dialoguer = "0.12"
lru = "0.16"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.10"

[dependencies.kompact]
path = "../../core/"
default-features = true
# features = ["silent_logging", "low_latency"]
# features = ["silent_logging", "ser_id_8"]

[dependencies.kompact-net]
path = "../../network/"

[[bin]]
name = "dynamic_components"
required-features = ["type_erasure"]
