[package]
name = "dynamic-benches"
version = "0.1.0"
authors = ["Lars Kroll <lkroll@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
fnv = "1.0"
#fxhash = "0.2"
twox-hash = "1.5"
synchronoise = "1.0"
panoradix = "0.6"
im = "15.1"
rustc-hash = "1.1"
sequence_trie = "0.3"
rand = "0.7"
criterion = {version = "0.3"}
# only works on nightly
# criterion = {version = "0.3", features=["real_blackbox"]}

[dependencies.kompact]
path = "../../core/"
default-features = false
# features = ["silent_logging", "low_latency"]
features = ["silent_logging", "ser_id_64", "use_local_executor"]
# features = ["silent_logging", "ser_id_64"]

[dependencies.datastructures]
path = "../datastructures"

[build-dependencies]
rustc_version = "0.2"

#[dev-dependencies]
#criterion = {version = "0.3", features=['real_blackbox']}

# [[bench]]
# name = "network_latency"
# path = "src/network_latency.rs"
# harness = false

# [[bench]]
# name = "hashes"
# path = "src/hashes.rs"
# harness = false

# [[bench]]
# name = "actorrefs"
# path = "src/actorrefs.rs"
# harness = false

# [[bench]]
# name = "loop_opts"
# path = "src/loop_opts.rs"
# harness = false

# [[bench]]
# name = "pingperf"
# path = "src/pingperf.rs"
# harness = false

[[bench]]
name = "actor_store"
path = "src/actor_store/mod.rs"
harness = false
