[package]
name = "protobuf-test"
version = "0.3.0"
authors = ["Lars Kroll <lkroll@kth.se>"]
edition = "2024"
rust-version = "1.94.1"
publish = false

[dependencies]
kompact = { path = "../../core/", features = ["protobuf"] }
protobuf = "3"
bytes = "1.11"

[build-dependencies]
protobuf-codegen = "3"
