[package]
name = "kompact-actor-derive"
version = "0.11.1"
authors = ["Max Meldrum <mmeldrum@kth.se>", "Lars Kroll <lkroll@kth.se>"]
description = "A derive macro for Kompact Actors."
edition = "2018"

# documentation = "..."
homepage = "http://kompics.sics.se"
repository = "https://github.com/kompics/kompact"
readme = "../../README.md"
keywords = ["actor", "kompics", "component", "async"]
categories = ["asynchronous", "concurrency", "network-programming"]
license = "MIT"

[badges]
# Maintenance: `status` is required Available options are `actively-developed`,
# `passively-maintained`, `as-is`, `none`, `experimental`, `looking-for-maintainer`
# and `deprecated`.
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "2.0", features=["full", "extra-traits"]}
quote = "1.0"
