[package]
name = "kompact-component-derive"
version = "0.7.0"
authors = ["Lars Kroll <lkroll@kth.se>"]
edition = "2018"

description = "A derive macro for Kompact component definitions."

# documentation = "..."
homepage = "http://kompics.sics.se"
repository = "https://github.com/kompics/kompact"
readme = "../../README.md"
keywords = ["actor", "kompics", "component", "async"]
categories = ["asynchronous", "concurrency", "network-programming"]
license = "MIT"

[badges]
# Maintenance: `status` is required Available options are `actively-developed`,
# `passively-maintained`, `as-is`, `none`, `experimental`, `looking-for-maintainer`
# and `deprecated`.
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
syn = {version = "0.15", features=["full", "extra-traits"]}
quote = "0.6"
