[package]
name = "kompact-examples-local"
version = "0.11.0"
authors = ["Lars Kroll <lkroll@kth.se>"]
edition = "2024"
rust-version = "1.94.1"

[features]
type_erasure = ["kompact/type_erasure"]
silent_logging = ["kompact/silent_logging"]

[dependencies]
slog = "2"
slog-async = "2"
slog-term = "2"
async-std-resolver = "0.24.1"
dialoguer = "0.12"
lru = "0.16"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.10"

[dependencies.kompact]
path = "../../../core/"

[[bin]]
name = "dynamic_components"
required-features = ["type_erasure"]
